@@ -16,6 +16,7 @@ version x.x.x (xx/xx/xxxx):
   - lmsd: fixed -h option segfault (alec)
   - on customers list added nodes online status and icon for nodes connection 
     status change (alec)
+  - additional filters for Customer Search, searching in service address (alec)
     
 version 1.5.6 Baal (24/04/2005):
 
